--- a/Frontend/src/app/globals.css
+++ b/Frontend/src/app/globals.css
@@ -5,19 +5,36 @@
 @tailwind utilities;
 
 body {
-  background: linear-gradient(135deg, #1c1c1c, #2c3e50);
+  position: relative;
+  background: linear-gradient(
+    135deg,
+    #1c1c1c,
+    #2c3e50
+  ); /* Gradient stays static */
   background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
+  background-position: 0% 50%; /* Keep gradient fixed */
 }
 
-@keyframes gradient {
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url("../../public/dog.png") no-repeat top right,
+    url("../../public/dog.png") no-repeat bottom left;
+  background-size: 10% 10%, 10% 10%;
+  background-position: top right, bottom left;
+  animation: moveImage 15s ease infinite;
+  z-index: -1; /* Ensure the images move behind content */
+}
+
+@keyframes moveImage {
   0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
+    background-position: top right, bottom left; /* Start position of images */
   }
   100% {
-    background-position: 0% 50%;
+    background-position: bottom left, top right; /* End position of images */
   }
 }
